# jit-regex

./: .clang-format  .gitignore  CMakeLists.txt  README.md  bench_out.json  content.txt  install-server.sh
.github/workflows/: standalone.yml
all/: CMakeLists.txt
benchmark/: CMakeLists.txt
benchmark/bench_results/: bench_cmp_all.txt  bench_cmp_ascii.txt  bench_out.json  extra_bench.txt
benchmark/bench_results/21_03_2022/: bench_out.json  google_bench_visualization.ipynb
benchmark/bench_results/dfa_comp/: dfa.json  dfa_2.json  dfa_3.json
benchmark/bench_results/last_results/: logs_1.json  logs_3.json  logs_4.json  logs_5.json  logs_6.json  regexdna.json  tpch.json  tpch_2.json
benchmark/bench_results/perf_eval/: regex_dna.json  regex_dna5.json  regex_dna6.json  spark.json  tpch.json
benchmark/patterns/: common.txt  sql.txt
benchmark/scripts/: ascii_bench.json  cmptm_bench.py  ds_generator.py  generator.py  scrape.py
benchmark/source/: benchmark.cpp  debug.hpp  main.cpp  main_cmp.cpp
benchmark/source/suites/: bad_case.hpp  bad_case_simple.hpp  bench.h  benchcmp.hpp  ip.hpp  regex_dna.hpp  spark_logs.hpp  thunderbird_logs.hpp  tpch.hpp  tpchlineitem.hpp  tpchorders.hpp  tpchpart.hpp
benchmark/source/suites/compile/: common.hpp  sql.hpp
cmake/antlr/: ExternalAntlr4Cpp.cmake
documentation/: CMakeLists.txt
include/: Engine.h
include/automaton/: Automaton.h  AutomatonFactory.h  State.h  Transition.h
include/codegen/: codegen.h  cpp-simd.h  cpp.h  jit.h  llvm.h  llvmCodegen.h  opts.h
include/fa/: fa.h  factory.h  state.h  transition.h
include/fa/special/: boyermoore.h  epsm.h  epsm_multi.h  kmp.h  simd-avx512f.h  simd.h  smart-epsm.h
include/helpers/: utf8.h  utf8range.h
include/parser/: AntlrNodeVisitor.h  AutomataVisitor.h  IVisitor.h  RegExp.h  RegExpHelpers.h  RegExpVisitor.h
include/parser/grammar/: Regex.g4  Regex.interp  RegexBaseVisitor.cpp  RegexBaseVisitor.h  RegexLexer.cpp  RegexLexer.h  RegexLexer.interp  RegexLexer.tokens  RegexParser.cpp  RegexParser.h  RegexVisitor.cpp  RegexVisitor.h
include/parser/nodes/: AnyCharNode.h  AnyStringNode.h  AutomataNode.h  CharNode.h  CharRangeNode.h  ComplementNode.h  ConcatNode.h  EmptyNode.h  IBaseNode.h  IntersectionNode.h  IntervalNode.h  OptionalNode.h  RepeatNode.h  StringNode.h  UnionNode.h
include/parser/visitors/: AnalysisVisitor.h  RegExpVisitor.h
source/: greeter.cpp
source/automaton/: Automaton.cpp  AutomatonFactory.cpp
source/codegen/: codegen.cpp  cpp.cpp  jit.cpp  llvm.cpp
source/fa/: fa.cpp  state.cpp  transition.cpp
source/parser/: RegExp.cpp
standalone/: CMakeLists.txt
standalone/source/: main.cpp
test/: CMakeLists.txt
test/scripts/: dsgen.py
test/source/: greeter.cpp
